add fund change

--- a/src/app/pages/funds/add-funds/add-funds.component.html
+++ b/src/app/pages/funds/add-funds/add-funds.component.html
@@ -5,15 +5,15 @@
             <table class="table table-hover table-bordered">
                 <tr>
                     <td>Client Bank Detail</td>
-                    <td>Bank Name</td>
+                    <td >{{Client_Bank_Detail}}</td>
                 </tr>
                 <tr>
                     <td><label>Client Code</label></td>
-                    <td><label>D5422</label></td>
+                    <td><label>{{Client_Code}}</label></td>
                 </tr>    
                 <tr>
                     <td><label>Client Name</label></td>
-                    <td><label>D*V*N* * *A*D*I</label></td>
+                    <td><label>{{Client_Name}}</label></td>
                 </tr>    
                 <tr>
                     <td><label for="Amount" class="form-label">Amount</label></td>
