--- a/src/app/pages/funds/add-funds/add-funds.component.html
+++ b/src/app/pages/funds/add-funds/add-funds.component.html
@@ -25,13 +25,15 @@
                         <div class="col-xs-6 col-sm-8 col-md-8">
                             <div class="text-left">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="GatewayType" id="GatewayType1" value="NB" checked="">
+                                    <input class="form-check-input" type="radio" name="GatewayType" id="GatewayType1" value="NB" (change)="gateway
+                                ($event)">
                                     <label class="form-check-label" for="GatewayType1">
                                         Net Banking
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="GatewayType" id="GatewayType2" value="UPI" checked="">
+                                    <input class="form-check-input" type="radio" name="GatewayType" id="GatewayType2" value="UPI" checked="" (change)="gateway
+                                    ($event)">
                                     <label class="form-check-label" for="GatewayType2">
                                         UPI
                                     </label>
@@ -40,7 +42,7 @@
                         </div>
                     </td>
                 </tr>    
-                <tr>
+                <tr *ngIf="gatewayvalue == 'UPI'">
                     <td><label for="ClientUPIID" class="form-label">UPI ID</label></td>
                     <td><input class="text-left input-sm" id="ClientUPIID" name="ClientUPIID" [formControl]="f.ClientUPIID"></td>
                 </tr>    
