--- a/src/app/pages/Portfolio/holding/holding.component.html
+++ b/src/app/pages/Portfolio/holding/holding.component.html
@@ -42,12 +42,12 @@
     </ng-container>
 
     <ng-container>
-        <!-- <div class="text-end">
-            <input type="submit" value=""
+        <div class="text-end" *ngIf="holdingData.length > 0">
+            <input type="submit" value=""  (click)="downloadCsv()"
                 class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
             <input type="submit" value=""
                 class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
-        </div> -->
+        </div>
 
         <div class="table-responsive mt-2">
             <table class="table table-hover table-bordered">
