all changes push

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="login-transform-middle text-center">
 
-                <img src="../../assets/images/my-stocks-logo.png" style="width:250px;"><br><br>
+                <img src="./assets/images/my-stocks-logo.png" style="width:250px;"><br><br>
                 <section class="login_form">
                     <div class="row no-gutters">
                         <div class="col-md-7">
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                         <div class="col-md-5">
-                            <img src="../../assets/images/login-bg-2.png">
+                            <img src="./assets/images/login-bg-2.png">
                         </div>
                     </div>
 
