--- a/src/app/pages/Portfolio/holding/holding.component.html
+++ b/src/app/pages/Portfolio/holding/holding.component.html
@@ -45,11 +45,11 @@
         <div class="text-end" *ngIf="holdingData.length > 0">
             <input type="submit" value=""  (click)="downloadCsv()"
                 class="fa fa-file - excel - o btn btn-default btn - block text-primary me-3 stox-btn btn-2">
-            <input type="submit" value=""
+            <input type="submit" value="" (click)="downloadAsPDF()"
                 class="fa fa-file-pdf-o btn  btn-default btn-block text-danger stox-btn btn-2">
         </div>
 
-        <div class="table-responsive mt-2">
+        <div class="table-responsive mt-2" id="pdfTable" #pdfTable>
             <table class="table table-hover table-bordered">
                 <thead class="table-dark">
                     <tr role="row">
