--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -268,6 +268,13 @@
             </a>
           </li>
 
+          <li>
+            <a class="dropdown-item d-flex align-items-center" routerLink="/home/terms-and-conditions">
+              <i class="bi bi-box-arrow-right"></i>
+              <span>API</span>
+            </a>
+          </li>
+
         </ul>
       </li>
     </ul>
