--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -204,7 +204,7 @@
                                                     </div>
                                                     <div class="d-flex align-items-center mb-4">
                                                         <div class="flex-shrink-0">
-                                                            <img src="../../../assets/images/dummyBank.png"
+                                                            <img src="./assets/images/dummyBank.png"
                                                                 alt="Generic placeholder image"
                                                                 class="img-fluid border border-dark border-3" style="    width: 70px;
                                                             height: 70px;
